--- a/packages/window-size/package.json
+++ b/packages/window-size/package.json
@@ -118,7 +118,7 @@
   },
   "dependencies": {
     "@react-hook/debounce": "^2.0.3",
-    "@react-hook/event": "1.0.4",
+    "@react-hook/event": "^1.0.4",
     "@react-hook/throttle": "^2.1.2"
   },
   "peerDependencies": {
