--- a/packages/hover/tsconfig.json
+++ b/packages/hover/tsconfig.json
@@ -1,17 +1,14 @@
 {
   "include": ["src"],
-  "exclude": ["src/**/*.test.ts", "src/**/test.ts"],
+  "exclude": ["src/**/*.test.ts", "src/**/*.test.tsx"],
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "esnext",
-      "dom"
-      // "dom.iterable"
-    ],
+    "lib": ["esnext", "dom", "dom.iterable"],
+    "jsx": "react",
     "moduleResolution": "node",
-    "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "strict": true
   }
 }
