--- a/packages/mouse-position/.eslintrc
+++ b/packages/mouse-position/.eslintrc
@@ -1,22 +1,38 @@
 {
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint", "jest"],
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
+  "plugins": ["@typescript-eslint", "jest", "react", "react-hooks"],
   "extends": [
     "eslint:recommended",
+    "plugin:react/recommended",
     "plugin:jest/recommended",
     "plugin:@typescript-eslint/recommended"
   ],
   "rules": {
-    "no-console": "off",
-    "no-prototype-builtins": "off",
-    "no-constant-condition": "off",
-    "no-undef": "off",
     "@typescript-eslint/member-delimiter-style": "off",
     "@typescript-eslint/interface-name-prefix": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/ban-ts-ignore": "off",
     "@typescript-eslint/camelcase": "off",
-    "@typescript-eslint/no-use-before-define": "off"
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/no-use-before-define": "off",
+    "no-console": "off",
+    "no-prototype-builtins": "off",
+    "react/no-children-prop": "off",
+    "react/display-name": "off",
+    "react/prop-types": "off",
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn"
+  },
+  "settings": {
+    "react": {
+      "pragma": "React",
+      "version": "detect"
+    }
   },
   "env": {
     "browser": true,
@@ -29,7 +45,7 @@
   },
   "overrides": [
     {
-      "files": ["**/test.ts", "**/*.test.ts"],
+      "files": ["**/test.ts", "**/*.test.ts", "**/test.tsx", "**/*.test.tsx"],
       "settings": {
         "import/resolver": {
           "jest": {
