--- a/packages/switch/.eslintrc
+++ b/packages/switch/.eslintrc
@@ -23,7 +23,9 @@
     "no-prototype-builtins": "off",
     "react/no-children-prop": "off",
     "react/display-name": "off",
-    "react/prop-types": [2, {"ignore": ["children"]}]
+    "react/prop-types": [2, {"ignore": ["children"]}],
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn"
   },
   "settings": {
     "react": {
