--- a/packages/window-size/package.json
+++ b/packages/window-size/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-hook/window-size",
-  "version": "3.0.5",
+  "version": "3.0.6",
   "homepage": "https://github.com/jaredLunde/react-hook/tree/master/packages/window-size#readme",
   "repository": "github:jaredLunde/react-hook",
   "bugs": "https://github.com/jaredLunde/react-hook/issues",
@@ -71,7 +71,7 @@
   },
   "sideEffects": false,
   "scripts": {
-    "build": "lundle build",
+    "build": "lundle build && rimraf throttled/types && mv types/throttled/src throttled/types && mv types/src/index.d.ts types/index.d.ts && rimraf types/{src,throttled}",
     "check-types": "lundle check-types",
     "dev": "lundle build -f module,cjs -w",
     "format": "prettier --write \"{,!(node_modules|dist|coverage|throttled)/**/}*.{ts,tsx,js,jsx,md,yml,json}\" && prettier --write \"throttled/{,!(node_modules|dist|coverage)/**/}*.{ts,tsx,js,jsx,md,yml,json}\"",
